--- a/ansible/inventory/kube/host_vars/k3s-01.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-01.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:sEC0JvTb,iv:PSn+ZdKNvCt/j9dvlJqeGjRuGrfFmfP9PpAyLU1H5nI=,tag:ELvJQSXQa+ElTCMc4KQESA==,type:str]
-ansible_user: ENC[AES256_GCM,data:EdZFqL7b,iv:2F+9t/wJXA4XDxu38yJCRO1MLcvRXhfgac3+lXl2fzg=,tag:GGjTfet10nR+KwIDBUtfOg==,type:str]
+kind: ENC[AES256_GCM,data:Yvai01nQ,iv:WgHAuYuENVrGghmcaIvwMSBgHQqYnO2Jhf0QQGnzL/Y=,tag:qOQKvMH5pyIsf9p/icL2ew==,type:str]
+ansible_user: ENC[AES256_GCM,data:hUiCHdz7,iv:KYORdfnCMo3vcCLZzJlipY7Niivs4QRsACaBx+Nx9XM=,tag:84l/W+Miu4E15xsvk476ig==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBBYnp4UkN2eWwwRjdONVA1
-            RzRSVGxRZWtENlB2eFFlYmQrL1ZjdVFXVVM0Cko1ZzU0NncyZGpqbmxwTFY3MFVr
-            VWs4ckFCRjFVTnl0ZWZ6KzFhV1BZR0UKLS0tIEgwSmU4bWFiMjJKbHNUQXBPVExF
-            UG1pNlY5UkxxRm10NE4vU1ArSlg0YkkKuprJGZFokM8Mi/MgsiHVQnRS0HMMUO7q
-            L2Jxfn00/6FA7NQeaQK/F5Tko7dM6lTRbN2Bhd9vt0acqaDNGPDUZg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAvOElJWExDQ003NG14ZVJj
+            LzZnQ3loMVlHUXNJNGtHbks2MFY4YWxJRWhBClg4RkZLWTgzZTJOV2ZRUlBtbVdE
+            d2VSYStDeXllTEg1Q1NVN3Jjb25QMTAKLS0tIHdQREk1WERrYy8vbXRzWkE2MXZD
+            MlpyR1lQTlZUazNKMlJRdml2SEJ0Y0EK05DtIqwvXk3irLYDI+RPimINLtlpx/ZW
+            sQC0VE4vNFp1hi0m76KW7ZeY3QjXlAH/J1a3J7g9bNkd4+AO3Jx5XQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-18T05:17:56Z"
-    mac: ENC[AES256_GCM,data:dNbz+fxXPpD9LhAbIpgbeTMVOqkubW8IBlrvier1T5nkrcnvyLpS3o1GSPM/lD16EXHYXJ94C/5wPbvw7RGm61EepLYSfyWUt6nvyhuf31MvQy+BbSRgNdwGKWnzRxrGdo3UciyOxo1L525GpxvkBJVHiDOFRIPzuGuBq4xCo7E=,iv:9apILZcNGrAYYjtuthLVzsTXQ2ZHu+VDOqksihdVD/8=,tag:B95xRxrm0/DfAlYn6e2bFw==,type:str]
+    lastmodified: "2023-02-18T05:35:11Z"
+    mac: ENC[AES256_GCM,data:tc4FHDAr0IRlCb/42cD4uCgIj4kWIKyOFbIa4/8afUPoxG7aF2F4DehfKTt4lcd81NbjF3NWg0qMcZ+yUYvkaoIAlDrSBEaYNb39EwCbvJaO+iQUoZzW2i3PVjhwIgiiAPt+XrvOhg9Xj5ZlMl+09fxgO+RRdhAyzm53ALdowZ0=,iv:4ER1QrDxGQbm5tovXkfiHjsx8UXZrlnbUifASY5JlKQ=,tag:5VL2tzy27kxqVPVNIj9h6w==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
