--- a/ansible/inventory/kube/host_vars/k3s-03.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-03.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:kSdVsqVP,iv:8vsYsP4eXEhPi68j/GAKfLTmB8N8jKtPQiYzLQKPTkM=,tag:0jb1vqeRdGsVxEUpV7JNeQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:quKyjXeF,iv:z/iwsLFz9i3Yotz5iww1dBrMdipmlTm0HX1TUQ1uUFE=,tag:e/T9/TMdv0UtF9kO1JCfoA==,type:str]
+kind: ENC[AES256_GCM,data:WaXiVKhJ,iv:nyzu2Co6tX8jLWW/9IKGr1MoIEIJdsynYYaMydk9zUA=,tag:HcbFODMpKUCTc3UEK8MGcA==,type:str]
+ansible_user: ENC[AES256_GCM,data:0mphOGzp,iv:FK6HabbFX8wp+s8qWT5NtliHIaKQqMJLAwgPnv56yag=,tag:2VQK71ytj8Rz/v0uaU63pg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBXRzAvWWdSbDNXa1FzSDRl
-            MWt1bzFTQ0x0RGNVeEpGZjBjb1RhYmxNaVhBCjJSell5cmszOERaLzNmV2RyTS9X
-            YWdCNmM3WTUxR3plN2N6cDlKV05UTUUKLS0tIGV4OEpweEV5a3ZYTlNjTHVWaDR1
-            OXVaOW5EZ2hYekMxazN4elpITExxdlkKtACTrqlYEFPvEUZ4Wf7Ls7lD7zr+tZNm
-            wvy7bXdRnSY/bmVifvVTBUy7et/nQHYSD9lcKOppDgFvxBPNjEbZ5g==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBkQzFhaWw5azdDY0MzRjFH
+            SW1wNEI0RWhWU3JJZFkzUDI1RkwxVkxYMVdvCmlrMkRQL2lxZ09pSk1tNTIrRGlV
+            QlhGZzFtdTQ2QUNkWWc2OEkwcGZicmcKLS0tIEw2bVZuVjRyclNwOGlrUWVkNWQ5
+            RzREcUdSeXo5NVovN2VrdFR3STFCZlUKfo5ks8mc8hxZBRtQjl6ajQSkKnpyOT2P
+            ZnI7oQS24rq7WMVlimoVaM+t3IfjOneUA5mebXWSRUZ9C6p7RVejuw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-18T05:17:56Z"
-    mac: ENC[AES256_GCM,data:xrKYZQdhbLtZyD1aYwngDHXCa8HeZFRIVLeOP/+BntV/G/93/uyMhLSoJMXoJ3djnRsMP8ueii8z6myQd7J8A/v/CmbRSZJdmI0HHfQPhn1+zxoMDTA4zQA0Zk7tSN2eA/steGw9LnT7JHY6pWi7qYmWRwxoyQDPkVJGGZ56yqM=,iv:yTpwJqrfbx0eI5sl8jrnGnEQC52PBtDQZcuGnyTkmsc=,tag:HFSWC2a50Y16YlvR9Kxggg==,type:str]
+    lastmodified: "2023-02-18T05:35:11Z"
+    mac: ENC[AES256_GCM,data:G2GmK3Wam1HsQVUzfOT0uUI0x09isEKz4FCxlfVbrs7j58V6G4PR95FOyP7us9RHLdEKc2AfP4KVgcfd3Zs7kJkrgiUpYqSU5roD7W4YdOXZJoMWo/Y0RKuZWgF2Cgo2Qc8V3NUkgG4Z0Er2L8dcGxSpbT/+1XdPmT1RurpTXqw=,iv:+I79rcFAEKcsDpB1k7SRyKX3fmPkf53wnm77P5SP/n4=,tag:nP6VULLAGL/9KcngIuByVw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
