--- a/ansible/inventory/kube/host_vars/k3s-04.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-04.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:n+ksoxy4,iv:sURh2ClgOfFXWQZMThiZ09VnXgJTvBnGVyMfwI6uVa8=,tag:9yScmtz7v6sVDa+aRgDnzA==,type:str]
-ansible_user: ENC[AES256_GCM,data:B9WY2f+E,iv:13q9Hm520ZeBLPR/mktnYNHLSeCwW22DCImvg7w1C1E=,tag:Jf7jdRYagOu4OCGz9nNRqg==,type:str]
+kind: ENC[AES256_GCM,data:F+uexRbg,iv:tamGl63AE3b+DGM3j2OcKbLLGHiu7o1bfmcZdSRCTQI=,tag:qDLYeIpq0HYTSgE+VozvCQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:Pesy9m3P,iv:7rVlXTkbBFxAEi9aoHbau1VEcGxw+cd7LvZFf1rt25Y=,tag:TTAEc6hCVDqAOalu4kv3Dw==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBCZHhqR3JRaXMyL0dlckN1
-            T0xmQUV3V3NoWDVxbll1UFIvWWZBemw4R0dFCklUb1RZemdldHBHQWVKZUV3R1NF
-            YURnRndTTzBFZG1seEJXZkJLTFlPc3MKLS0tIEk0eitjdUhvQUJOekhqY0lvWnBh
-            TjRYM0JzalJUTGUxNHhwOUhWOWNyQ2MKDAEDBDAEKItRRhXUbKH+MKI3/PXnOAEX
-            PinDHzJs685sKnwlkqpAMBxPC9GPQ+c6aKqGsCBq8jHvI1FQTDvOcA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWV1k4RUVjM1oxdFBaVmdG
+            M01jZ3dUZVZpNWNCT2JiOXhwcmtrc0hyRVc4CjVQOWNDSGZZeFNNdkxOd0VDN20r
+            aTJ5N0pWUzFBdHR2OC9OZHh6V25BN2cKLS0tIC9YeU5pblFXMDVmY2NaRFZHT2dR
+            UG9UVGJkU2dNa2U1ZkZDSm1XNzBtOGMKm9Z86DFPsBttD7iPVYcNwz+CMk7PU8xD
+            VOKbDjMdz5Q7QbP6OWGX05TKEZodXyCeEHsQffeaWM5xADVYzvBFwg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-18T05:17:56Z"
-    mac: ENC[AES256_GCM,data:JRCl0X3ev7T5ZE63s6O4sW2eakFTCDItIQ1/oRLktgpt7C/TJqlJIJtw/pXwe0DHtywbLjvZNncAx6Uf1emy1Lt+MKbjfbjlFLPYRJNEPMRgn40c8jooLSXZmHyBfyoDiu5n7T0a//+hZ2SpIBp08JDOlzXzZl01jDr9D0lEmyY=,iv:qKBdkWpHb7H7/Uk6wNIRqIS4fFzFexvw7DS1pDzvSSE=,tag:oT+uQEdWIQgT7aJIfWltRQ==,type:str]
+    lastmodified: "2023-02-18T05:35:11Z"
+    mac: ENC[AES256_GCM,data:mGIrOFFasDRr3PX+0GX+O2oacr440Pgy1SSaYLuVQ4zzuzxS/UdVzqNtsyfTI3DfPZPSaPsSaRQ4fVwIxNRNhSyaRFXloHSnk57PokhOFzIpuX5K5ULa4iW/sMDi59HKpx4pzwsdN2rEWBStvH4bCBFvfjPCkHTEsYJr/mqodEo=,iv:VisWapPvHAa72FqTVUaCdId1mPT2b0kIO3ZC5K20EeE=,tag:ccjyXoQlYe60jvJHAfafpw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
