--- a/ansible/inventory/kube/host_vars/k3s-06.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-06.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:o0FlVS5P,iv:N218a7eD4I+TZoHJRfKZEUzd9QBIiFHaO1X9ywK+biI=,tag:sDMLMGLiBw0SHG7SSGyG2Q==,type:str]
-ansible_user: ENC[AES256_GCM,data:tMQTJyMN,iv:cUQmnbhCgu63o6EJTXFwbiV04J/iQjXspJAkfxf8IDQ=,tag:aVov3wf6HEwaxpeMaqXW3g==,type:str]
+kind: ENC[AES256_GCM,data:xMgDPTpw,iv:SAv0jG2AKG/+7f4UBQVRcmQQq8ZFYfcYUWdmhHIxF8g=,tag:7bCKMiRy+0S0xw80yqw7nw==,type:str]
+ansible_user: ENC[AES256_GCM,data:lp9lP43Y,iv:P0g3jfPqYD1e7ak48hZn0LofmBrdXRJypjIUecbBmF8=,tag:qzQvZLwd7U/K9xRNmx4oWA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBGaEk2c21zQnByWGdPd0lI
-            ZDhVVXdXbVFjakFUTi9oWkdvY3pJa0FpRTFvCkNHRmxxVSs1Vm9LVHo3dFJ2OW9X
-            bHZ4TGdUQlczbzI4S0Jic2ZiRTJxUEUKLS0tIG9CRmZNbS90WW54NzFyaU5ST242
-            Y2hjVVh5T1dlT2pWbVhBSGVDb3ZjZ00KTW+t7YChQpyjbDT1Hwd4COx+glcJmgJD
-            1hGFMbLswEIfMnXGsvsF9V6rIxlzNsoI70GF90pKbJoTrlbC1pqogg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWYjhUY0hvSWIwN0ZPY2ZB
+            c0xKNWVndXdlL041NGd4R3NuT09IbTRuY1E4CmxrSmtDdndFSGtiMUJNSEpLVEtL
+            aEhmdlhnaHErK2JUZWRtT09BRERGV1UKLS0tIHNxTnplbUZkS01GSFlMWmp1WHV0
+            VW5vV2VkUEVpQ3kyZ2o1N0dJWkFjbEEKw3bQpacNay5BlQ+uhbZzKuLRYXqeRqt1
+            KQp8DLVq9PEEPtkxvecTtG0V1z9Y7DhWRKAJZoFvDsp1baHU99pXCA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-18T05:17:56Z"
-    mac: ENC[AES256_GCM,data:HYX8Lp6Fp93Fm0Kuq4gO0RnuLI1sRapntVPwI0TajvIO/50PZb9NIX7Su/3fESV3GpwhmrPHj8hHXvxO2z9kLxj44yrSk6xi4idDtOBprZEeiwY0MX+BeaC7Wz91SSO3OXE8oE5KHMTynTOqXq+/qUaHgtpxh83WtVbB/hifPsg=,iv:/lXtURzV5gu/LOJphKwATF6q6zvOY5pjmWOv3AHKkEw=,tag:21f3tPpAWoBsFa20isOJYA==,type:str]
+    lastmodified: "2023-02-18T05:35:11Z"
+    mac: ENC[AES256_GCM,data:U5J53WrEwACuXwY+DiR4Dy2NYPUm0kOiKhKlyk5SFt6Yk1qsbLE6RGMZLwq5K7JA9+gb3ob2UguonYP05YiCL+5l5PXJFW0GJw+wID19uUhPvf8R7M2avdg3aHbKIewY4TrqOeaDgHsgZ/a1q2mUy82i+fWg5A61/hf1W6LUStc=,iv:6+yINJPFTmNYh8YCQVCI5eyvJb5Z70z9EC+Zg0iADIE=,tag:MwMGb/IlH6m8bR6pY+TFnw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
