--- a/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
+++ b/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
@@ -5,9 +5,9 @@ metadata:
     namespace: networking
 type: Opaque
 stringData:
-    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:a2/gCFOY6Kh1PafWk1tzV0fVC64V,iv:p6b2rMNvfcO6/ZuspYxbBWqjNj2seBeY7/rvgx0CJgs=,tag:qkO9+LjK/Q5Am0jdlM+YDg==,type:str]
-    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:wIBwL0K1R5V4uZIJJEs7L9JuzSkUUvfIL3pAwoS3gWltpkvnYw==,iv:wnZ46LPToVT+I3UbI7ReQd7MRMNi0NhRvJPHbNa7vAQ=,tag:dWPKgwc/NnBqrnYtim8+Xw==,type:str]
-    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:N/bPchJzZb7FqN8=,iv:hPCuLnAFL6MrLc+x6mNoNbDOh563Eu6aNZOGHsD8faU=,tag:HFvSu47Mqn8GHluYvqbeeg==,type:str]
+    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:SNQK5jdJ0gayJDYIY/WBsmKjmGQl,iv:w3xfkf97HDU2Y4uLnAsFEFMrvm8pG6jNtcWTzIOP7Pw=,tag:oQ7brzTtqSbe2HBlfWkKYw==,type:str]
+    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:jSrJArEBxkIgrDoOm1MJYGAEj425y3d1Zls60oURTl+lYEBkVg==,iv:0z+U7saeJSAQYwREDnIoNFhEbW6+pODT2OD9U8ZDVmk=,tag:TVsIjgKZmc2xEJcYrVUS/A==,type:str]
+    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:T2wlLXf1x8XNyQM=,iv:zlnSYrmPukoDG3i/2RMd3PJfrOhIm2l5g0sBDhu4kQ0=,tag:IWCU+whMFYz5++sHmNh0Zw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBLSk4xRTlud25iampzT3dq
-            VmNtOGhuSXBaODdWOFpxeVdwZFU3N09RSmo4Ck5uTjJoSDNZeE1GWUs2N3FnNUJx
-            amFGaHJ2UjR6Yko0VldqbERuSjVsWkUKLS0tIGJFcXd4OFZYR3hWajBkZE9SMTBi
-            T3A1ZnJlY1ZaZ3Jjb09rWi9wMEEvSUUKzU2/D76rIRnQ5TMRTSy1CBvA5vrTT/0h
-            qDjoZ9/owpMdtts6O/awY6rsoIojgMqiRTvnXuXOatouKmh2bg0vgw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBsbllmVWlkbGhrWCtEZGpJ
+            NHZXcytheWdacjJmNVhUTWtaVWpRRXNZU1ZFCnNxYXQ0NHNCWitrcnBEZkg4L0ho
+            MmlzNG1vZ3ZsWCtyM3B4dmszS085VDQKLS0tIDZvczBpais5YTFVOU1FTnRpSzNx
+            YXVNb0dua0V6N1N0MFZJUVhlZEYvajAKkInHU+aojQ3NCbmmpSLUrUqH3RpxAA3l
+            zakUzeQ42vj/qfwblfJkpxJ3OFgrg7ZzrP8hahweiXL2nSYFT0jGKA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-18T05:17:56Z"
-    mac: ENC[AES256_GCM,data:AJ/6Ykp6LSbH2nOmjSZjaiFIxWS7fnCUdpm71nVWLSLhmxptbcZlB94UypIj8ctC71FB0S08aHeg3eM3o47ElsOCwmtQJCPvIs06+rYN1yObbLbIXxBrYaya8k8gjMsfQyGXVHSoaZawg1rMuyx15HEZHTWHDzGcMELBHkijJLc=,iv:8aDjB9pdW62cFIqn1T8BBvKbr0h6AFuAdo57Z+Z4zsg=,tag:Qi1nuQ2yqiauo0L28wWVYg==,type:str]
+    lastmodified: "2023-02-18T05:35:11Z"
+    mac: ENC[AES256_GCM,data:LIRniSrq76CR2jN602Nci+gPRSR7TlyTkHdO3RQOw28Y7gWpYng7Dd9XO11vKcwx6GHVRMyaD9RFnMdDf8Di+5+DMpjnevb5UAejkY/ASz6pfHfcvp/IqWU3pjHqUt0Z5ImzcyNSTb9ctvNll/f09B/Gj5BrkwTqYFmxdUHJVV4=,iv:NY7+S7he9wl4YZuZX3T5GALCDLgYV69m829O0DshId4=,tag:v+ycXIYjbzQdIKHWNc+WNQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
