--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,27 +4,27 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:bXwnRwWihMCItEc=,iv:btkg1h6m8A+X+D+svtXyu73pqb42oFnWMxP+Tcuwpqo=,tag:yOceSVGKoIMfmuFkGlrAhw==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:xUDMPLnI5XCTBezWG7Sh75dAnoQS,iv:/HnNoLOAdEAr998as7PxEVm0VJFC9O5xOhxnBE6JAgA=,tag:f6IN0XjMNZCwa4AviepNow==,type:str]
-    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:/tsx0b/4HP0GyRYtcg0/ffsQgAsopBt1GxQmuPsoTf1JOFLez8bQtzsnLGCRb+RXBPbEt0m1BFAwYoUj7JE/mkqkYmF5/0A=,iv:BTWmM31BrX/e2mZYF7zirmdhPkSs1+o+9ljsLdKV1EY=,tag:zkp6Z9LJ2QU/DXQwFD7XNQ==,type:str]
-    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:+hcpBBRQtKhrLg+arHsk8S4EiAidDIGerha+0N+NOIPXy1w=,iv:G9hJP+1xILU6WRoGTZstYROajVPtAKxZ7/DoYn+PgMM=,tag:rEX7In52Q0F1HApwzcV+WA==,type:str]
-    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:ZluFGwt1GfZd6+RahM92My5mqg==,iv:KGy3uzSwTXlQsr9BPC4IDkU0V5h2RoNCJTS1dTnqmK8=,tag:6eeIcuIh9aOfTJo5HNGLwQ==,type:str]
-    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:EXCf8tBXIsrpwEjR+AtZn50NOiao,iv:E0C4J2Yx/Ufpy14KjTelLMUF39AWBepkymQw14E/UMU=,tag:8le1UfHVdOcGg4lN8NkKqA==,type:str]
-    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:6cbwzbUFmoI=,iv:ERb1DMo5PNKYWAdpClJSQ/6cmlLanfh7Hn+M+H+t1pA=,tag:946kgZjUVQhpsUY/lxj6WA==,type:str]
-    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:hl9J9T/FsSI=,iv:7aEgmQzrMCf5QrVqShofc3GaFy1Um5hqVLkKjO9AdZc=,tag:pmpBOk4qs5KhAElo8qkX+A==,type:str]
-    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:efag0NbIboIjHeYciS9dQu8UP4W86oX5ru5bVswFTDrWtrrIm+5EUNdMJow6LygMe2nJTcwiXHKUibsuqEiiJg==,iv:8QB+V87NEcfeKRJd825hYOGbCajonlGgKn+ikoB2+ms=,tag:M3K50wzmFi8hV2m/I4/etA==,type:str]
-    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:b6+msKnROeFQDrEGkyktfxVneit8keNOVwdS62w2jHedbwSbc0dLIb9okLuf77e2o0LzGG2wu4UpO2iaVqoxoQ==,iv:BK+sK24lyhAOqSOv+VseBzJld7BR+A2cWyyDjezW2Dc=,tag:YGXZ8GqIl2py2vFSObdj+A==,type:str]
-    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:vHApqvWAF5cJ,iv:UnPvAiOfUT63SLmG+SeDOEtHGjNTmNIKam6n27dT52c=,tag:jQm2UTGDLyrRU9driicGyw==,type:str]
-    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:/a8+9T00DTDU4fH2EalE,iv:DNDLtHZHm49AyxiIc44et2MvJxQSbTqtyT6DPe9dGe0=,tag:Lqekl0sqZjIq36A8lisBWw==,type:str]
-    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:WiSTr03XyI0I9DtANSEqpPn6QLIPC3D9wiTNp5lDoEYShasTiXareiNTp38rnFPCkaI=,iv:YSLak1OTJ88mlVgKODhVCCP9H9laffxYZYo28oXA97U=,tag:74emzFYjyn+6gWkpRrel+A==,type:str]
-    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:7JqbQiaHqkVnSf3tlKg=,iv:YiWeno+5Upjn46SWk0Uxlf8TmYZrHp+87nU4qoQq6vk=,tag:aQxn2C87IQD/36ggw7mn1Q==,type:str]
-    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:61Dx/7fKgz3lOprrBjAaOK2wsBc=,iv:mAU+nw8IJLLE1THvj6pHgyKH0+2RynGa7dKbDVYqd10=,tag:Q1Sw1fBp1nTC34/8S3q/sQ==,type:str]
-    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:DtMid/dorSI=,iv:hNziXp1RerLOINOBjDlsbP0XOiU6DBw5+tjwPfZxerI=,tag:moeCdfZQg7ISkv8l0Jow4w==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:uWwovhYWO9HZ+Yyye/qp5GA2gbIY1CpjWE8VBu7zrRzlApmt+Ok=,iv:GQQyd8SQPCI9Xw3CPXy9+1QIVVmueEebH/A9T6XGYtw=,tag:W9brBkPXmlU34bdrwVU4bg==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:kRq/d5brxnU=,iv:LyqkdRzsKrArSeCy0k3DybHqTn9VU8gBxrAn87zv46A=,tag:LHt0ALbIg1kVq+j3GOq5NQ==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:UZlzlKe4JJd0,iv:jXQ6TO6/jDbG3jMwiZDboxEBNYuM99zvmzk9TSjX1Ow=,tag:OO9skm+kCO8X+zoGR24xng==,type:str]
-    SECRET_POSTGRES_USERNAME: ENC[AES256_GCM,data:KbP1PklFwQ==,iv:zJLjF/ISONl5K3EDbW2RPgvkBozxUx+sgpd1dJKEqKs=,tag:swKGbOkTi7za+DeCtZqsiQ==,type:str]
-    SECRET_POSTGRES_PASSWORD: ENC[AES256_GCM,data:CxNeat+TBE5m,iv:aUrAd0vqw+s3yyp2Fnaa6JUumG1E5y/uagaNps3bnb4=,tag:+alDM//i+aMOj23NDH4KhA==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:dZ6XtiGNk0fqAlQ=,iv:sZORif4doAWz3Jak6xvQADrmbRPVB1Z3w1HBM1Td/Yg=,tag:fw2+DJ4y3sx5jV1qPLPM8A==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:01XN4LcLYGHZLibVdYNOjxKDjaB8,iv:KeBcjomk0ly/Z5mPkbdo8O4HW/SPaEu48PPBiXYGXek=,tag:Iygvh5899SZvA9r3m4hkVQ==,type:str]
+    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:GBf9Z01/itBs5l0mqJEisqPCj4wWXz35akzpzWkROMDjwe4Srdd0ivzmVX1JsLM8OJmMPNw+0g0u5grsNHFjLV1uuijcGuc=,iv:zkm9BbakxJMzz8w3de1jphRLOD6PlXP0vMtNuDhK/zk=,tag:f7Tm9WuatDGoW+ydFCdwbQ==,type:str]
+    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:Vb++3TPerVfk//DwUoO7X/ox/af25Q6T/XgR0jeLxk9/K9I=,iv:xsPIdCvVNuPFN5l3PlyWLrf+nMCIPP537qup6yXy750=,tag:2Gfn8PLrXGLQRtaFaDh9KQ==,type:str]
+    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:v0Xa1MM+q4RRE+PjyYot9jdyvA==,iv:kshAsmtpmnRpikHbtKwvT3aS+8RSjpeSL+l2FMXobmY=,tag:PF2SIFLDbiqYdGdhKyIPjQ==,type:str]
+    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:W7ulmKrzH2QMGPhWfXkn+Blp8djw,iv:PbgjZ0+JG4JziBe1RMwB+9f2yA89LL8/1c8wofZW804=,tag:8buQKKvFEsE7cYZV3cvmXw==,type:str]
+    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:rXVrSB7osl8=,iv:wc2pvqtffTUHmcUxOJG/UrcveUAvIPJrzmxzTuT33Ac=,tag:5bwfI2qG2qsKpAGbYmxoKg==,type:str]
+    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:dxtT7Hbzkpw=,iv:G3HXpL3+vTruNL6egxu9JDARtwOb4AYjruzsvN+vkYk=,tag:wIw+uKloeld7iHGWRv6pLA==,type:str]
+    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:A5J5W35uv6rSGaQquvXq2VIlnu1UJ2uA7aqwr2WN0/2MYuum1TjUTbEsLYacK0gg4Cwh1TTsyAwm2r1JVlBbFg==,iv:LY8MRNfkZTCEVEQACVXIvM+bjsN9juHe67Fy1gOQZDQ=,tag:fO7tZn4OAquvERkXEW/FcA==,type:str]
+    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:eV8nS6HFFugcA2n84zjy2xLJJRD87m7E6dbEDS72zJ2ygKRuvdBGz7Bzl7wKT+GV/NegOWwZ//zwKo33gvTtaQ==,iv:eruWA3UEkhHKgZCO19ywjiFv2w6OQWobJYq+l9TFU5c=,tag:FzYZU0XXyJo7WpW0zK48PQ==,type:str]
+    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:S704hP5tMOp/,iv:CusYvvVE0ug9shIz7HGxpNaZEb83Dwa3a0eKoTpJsaM=,tag:JS55JTFZ5pvs2aUmPr3grg==,type:str]
+    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:G3dDnDAXlKQBew0RpoUT,iv:t8lr4AUBdbKwaQIQKvVTvdoThJ/3XszJDjPULZRphy0=,tag:zKJ2ilUZIQNM7EA1Bwj32g==,type:str]
+    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:T1wSMSzLfRC+EOXz30sgwzvpf1mq3YhTyLaCZVWl47Qgz/0i21kP1pmiG6cKCzkrUro=,iv:zFRH7sakVxaP7Yx7P+wv/+CUHNqWju+J36GqjfAqRkE=,tag:IeswO/ot4qYHC3y+P4jmLg==,type:str]
+    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:3l9u7S4Q2Y+hC1oZbts=,iv:DAuDER2veB7snp4/qiiD7osaYBjRUl5BpaPp0ZiIcac=,tag:U3y0aqIQmJ39WL9zBKIiTw==,type:str]
+    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:tLWZvcU8nIsEIBRUU6rN0hOqfow=,iv:YukwwFBmLcp+kCMAIBnUXsOMNgpVCSaPhtWusV6T0YE=,tag:kYas3T3cITmlYlkopYaiKw==,type:str]
+    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:C+Cse4GrnQc=,iv:iG4Rk2PDO5QwDwd8u4Xlh+Sl+sBgsLYPRwqXhcev7LQ=,tag:KFnsEoP1skwxhlgBWY4icQ==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:2BsgESt2aCzHHQ67,iv:d/tCNIknhvNnOIynp9RvCBDkJifUNcJvbVfrV1KcT90=,tag:IT6Xhp+lXeHnmOSPrd+5Xw==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:tehrWE8gQZ1p,iv:4YbaoaUlOQmMMKHVMMnQl8jy7v1B6XnUDCw6MpHSxUs=,tag:fcVU8ztVWeannFpqBVukCA==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:GstfhbwOKG1U,iv:CO8xg+o1+Mm0dGXqnY268P7a1MuhU8nUsQ+O/zj0/k0=,tag:gZBXOdWX0s7D3RjRklOasg==,type:str]
+    SECRET_POSTGRES_USERNAME: ENC[AES256_GCM,data:HivHmd+uNA==,iv:J47pgiC2VwkEcuklzk7ofNiUgQcDd695It8ukcXTWwU=,tag:lqfpfogSSokIhDjVG2s4gg==,type:str]
+    SECRET_POSTGRES_PASSWORD: ENC[AES256_GCM,data:txf0menYAy2m,iv:y0c9JMmZ6CEm0PHYVu3usqML32nTpzrGp1YzriX1lag=,tag:xEL8EkYbL7KT9glcOOfSPQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -34,14 +34,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBDRnRTOTlIaE1hY1pScmxM
-            MzFBQXJ5QUVnK0hpZUowbmhnNHMwOGxKR0NJCmgxKzUvbkM3OHlSQlZmTlBtdm1x
-            YlhXY0N6QVhsOXpxQit1NlNBNDJ4S0EKLS0tIGI2aS9xcTNiQ25MN3dRK2h1ZFVI
-            UkJKNWlEbXd0dVRzNks0V3NaaHM2K1UK/hyiBQAhg+ID1yYYYogptujrZXv3m763
-            Ux7fLzq2B/sd4uDGTx54bJu1gEOVVV5AiIZKzJMaHyGyXwnEY2F6+g==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBlSzR1OE9TMEdwbVpjY2M1
+            bStGbUdKRVdMNTFyVVRMdWE1M3BkeXdkTVhVCm85M3cxSzN4aDU3dkx4UUtZd1VS
+            UkVXV2ZaOW5UZ1Yra2hEZG1hMHJjbncKLS0tICtHZmhiL2RZOGZMbXpGeHRFU2VW
+            cmhOWnVaZDV2KzRrSzRsM0dMVE5YUDAKJht/uVYIHf/WRqtkrwGxXJuIkzk9j05O
+            Y6i9youoaMBV3ZXkBkqpeUgKFyEC9Lbqw3AM8xKam9yP34etVCO2vw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-18T05:17:56Z"
-    mac: ENC[AES256_GCM,data:Jru7OkD6f8I+waevZqzch9L4BHyGbjlheTxrcb+bB/znFr4mXzDWk06La+cZEtujWgdCBvca4Sx8I/RYMsq4jVXKb4e237DwZymFHzsUmjIDGKgiRNPas9hZkdI8EjOfu9w6H1YEDjP3z8vFwhM4vtwGJtHQELVJXrWVFudOoqI=,iv:suElJS//4z1K3C0FG8uLIQYrMDugSaTiwczeSm/xYtk=,tag:gGIufbTzKiarX5TzDpL33Q==,type:str]
+    lastmodified: "2023-02-18T05:35:11Z"
+    mac: ENC[AES256_GCM,data:hRHc234n5Bq+MPHI+JhxfgmqvFoJy0XACohEB19kexyMUdRrkGeWzP9KjTHgSVINTK26Ra/KrPeFGIswWzgWW1W/RbLgZqZwgxJflENB/7i6USaUoy3laNoCQLxYgbsw2PmntQj6kLeIETyhhd3lNmPUQjjh8NWgHYA7vSXlJfk=,iv:6dkaI7LQdmDRvMwt7FS+5UqomkYE7gyuy8uuELi2z/M=,tag:mxll1K+8YPWa81mlFvjOpw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
