--- a/ansible/inventory/kube/host_vars/k3s-02.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-02.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:gtU7q57X,iv:GbQjsdYawIWhoBwl19foi+6l0wQxpjE13wQ7mXuD6rE=,tag:OY36i4G/R3BhF1Q8WGjcIA==,type:str]
-ansible_user: ENC[AES256_GCM,data:UK5mYuy0,iv:yFTf8eAZOKOAGK2/XjdaSswoWKieIU6/FrASVyq9LzQ=,tag:NqjQAkiB3TNSqwhbwx33Bw==,type:str]
+kind: ENC[AES256_GCM,data:nZy4ggnZ,iv:8LzWP96zBrGYiPtVH9EGwe3oFOnH0NH5TU49JmGIXII=,tag:SLpMI6JFie/pojtgrDBWZA==,type:str]
+ansible_user: ENC[AES256_GCM,data:uRHlHXfw,iv:yWSz/jopqdHvLCevmxUpcFLfb7+7PZnJh27qjsXQbdQ=,tag:jR5B96Fom9Obe3vPl/6xVg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBJMHB5YVpzQnBVemE4ZDhj
-            K3ZJK3FiQ1k2bkV0RnIzcFBpalVsVW1QV1dJCklDamJHQ0dnbVIxR1g5azNuNWFx
-            SkN2RnU1clpEL09zUS9TbFNDZzNKS00KLS0tIFRyWU43S3BPT1Zrbk4vOGxjWloz
-            VE0zM21VT3B6aXQ4SEdHODZvdStrNEEKoerRODkjeAMD/PFKUsFiBvj2hbpK3qtw
-            /d7u3jYKlNx9yitaxlfPT8xwMBNznTHKE6eGDA0w8mDQ03zjvTvDNA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBScWNLUHQvL0t0dWJOckJ0
+            RTIwNWNWM0tnc2RGYXZ0ZU94TWdHcjRGRmpBCm13TnBXak1SYXZveVNPdUgxQ0RN
+            c2lmR1BueDY5cE1tMzMwM0JPcXNyNWcKLS0tIEhFV1VyUTBBbExPVFR4M08zZk5s
+            L2FFMm52SFhxRk5henk3U0tubm1QRlkKCAtBngP0LxRgGRMTZyngDbeT1ZPD3Wwp
+            29HfG5oe32Tb7OO5g6xJ+zYrm+lLCTTNslLz+nYHmIIUBADeQANocA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-18T05:17:56Z"
-    mac: ENC[AES256_GCM,data:zJgiBVVS9IG2eZA7B2gMNOz0oC67jJggmapCgjmabh7k+r6QkUDcuQDxsVl9Hq4GzdWThsSaItPDDi0zVTBq+SxUYxWZXXsc5paifu4YackAXNVlQfFWZAjUkpSVFA2XQFG4K52QUeCq04Y7rzZBiC+gf9LsVkD3vz1Knzr7/ak=,iv:i0adCIsLE2EDCpweDD5NYemun6BLY/nRzvyKqLXG5WU=,tag:DypvD+sw7Cs6JEmaq7nJmg==,type:str]
+    lastmodified: "2023-02-18T05:35:11Z"
+    mac: ENC[AES256_GCM,data:/EI4vpJb+xbu9ckCpkS6ahP6LfMvxsuJQYBiz95eaBdD0JYBLythQxD6qh1CBSigFCL3cYMSjmqy84oTYP/pGh2cO18ednRlayL3Mof1ymN//+fzGVwOqikAIV2vxBTi17NW3IBh6Xb+YVGG0BzDkGxZamCNQnc2jkfqaloHhpQ=,iv:n4ZZgOrasJUbeEjCw5Zx19RrixCmqimazXwGckGtE+0=,tag:HJ7aE2wSd+7iy0a5G28/BA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
