--- a/ansible/inventory/kube/host_vars/k3s-05.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-05.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:rIxg5Lhy,iv:askas8sVRv+njdtkq5ZSMUkQHJ4qBgnWsZMHTYQoe94=,tag:Sis+cTTxwHk6ykAjxJBLNw==,type:str]
-ansible_user: ENC[AES256_GCM,data:GLvTQIZZ,iv:LaJ5llXTjdhaEw5hFJ/YHOkn8uJZZqZDkbotIAl1HoM=,tag:nzMouc6ecMlmo/9FD+Tmiw==,type:str]
+kind: ENC[AES256_GCM,data:e9Cf/VZE,iv:orVeUokKJMfg/9Dxu5Mol5obzZ7TMehcFlOyPlrp7Vo=,tag:Zx1I5//GFxeYFdmD5lAW6w==,type:str]
+ansible_user: ENC[AES256_GCM,data:P1UfE8Vg,iv:/ntp8ba5u4YFWrR3SOQ5mTbcHWJL7JAaaqDn+j3xqTE=,tag:1SzObZMdmd/lVMwi5BQWFA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBpQVhRcVp4NXhVejZIMVJh
-            c3JRRmxvZ25QYWVZOUdyYXZNWWVsWTQ3MFVJCjVHYUNsNitwVWs3czdZZXJUajk1
-            TkZ1dEMxQWd1bENlaGwzaDgzRDMvZHcKLS0tIE5qVWp1VDFoZ1NwaURBd3N3OFMr
-            OXNvVWxMcDNXQWxlVHZIRlZPSW50N3MK3jEhu6oO9Z21AWHDUy51zKQR0mkj4CTO
-            6TreMA53WOBt48IwhLi/trspIfliW47KO+MYl5pYJ6leL8cyXtS9OA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBOZTk2R2FVengySDNTYk51
+            MkJuWVlZVW1uNUthMlAyRkRCRkxyL3dOVkhjCmRxL0pPb080bGFndzUxU1VkRFJP
+            bFdpZVVwd3luQmwwdEVJQ29ncU9vZDQKLS0tIEM5MndoeGZjdFJyREY4VUFiMVJO
+            WTdpN1JUZ2w0Z1p6bk1pLy91Qk5GK1UKfBERXJqVT01JHwVW4+Nox7gGOJAnOgTb
+            OSi9OyWeeKQI395tcvhQXsVEt/2CDisE0O9bCb3sg2nQNtJu5luiLA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-18T05:17:56Z"
-    mac: ENC[AES256_GCM,data:X5379tyZ+53L+hnnsGK5DUNIntZLy+plMqDoMYk24+543d2XiaVPtv/uKgNwawgXmPrHyIYxs8pwrZMT5Hudj3bYSVHLATrNXmblTyk1UhccS9SFTuWAKbwo2+R9yOk01Njfd+dVCEhmpu6Gl8ecH/T9x9a2hdN6hQIYrec+GG4=,iv:LaAcJNLMKbggOqV25b7SGkssiUJ5h45mZK0BJ49k/Eg=,tag:nNP/49/UHuHnHJkdbs/d3A==,type:str]
+    lastmodified: "2023-02-18T05:35:11Z"
+    mac: ENC[AES256_GCM,data:Q0gK0QLsjBVBFI7ONgEQXhl4J+/0aoFElDKMXySVSMH5Ow1+AOj5RsVIpiJjsHgSM7JbPN89ami14R1vve20qHZcoo/GTCQ/M7jKlUYO6+IAaljakt595BOTvg1mdzc3akuinOd5VOszJq8KiwUTVktuClMKneBZtcyRvgMYObA=,iv:YnIz8BpQkGPfvH4n5LsYzovO20NLRJodNHuMEwIviy4=,tag:UTFreRqONYtUGr/70FYZKw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
