--- a/ansible/inventory/kube/group_vars/kubernetes/k3s.yml
+++ b/ansible/inventory/kube/group_vars/kubernetes/k3s.yml
@@ -29,7 +29,7 @@ k3s_registration_address: "{{ kubevip_address }}"
 # (list) A list of URLs to deploy on the primary control plane. Read notes below.
 k3s_server_manifests_urls:
   # Kube-vip
-  - url: https://kube-vip.io/manifests/rbac.yaml
+  - url: https://raw.githubusercontent.com/kube-vip/kube-vip/main/docs/manifests/rbac.yaml
     filename: kube-vip-rbac.yaml
   # Tigera Operator
   - url: https://raw.githubusercontent.com/projectcalico/calico/v3.25.0/manifests/tigera-operator.yaml
