--- a/ansible/inventory/kube/group_vars/worker/k3s.yml
+++ b/ansible/inventory/kube/group_vars/worker/k3s.yml
@@ -9,5 +9,8 @@ k3s_control_node: false
 k3s_agent:
   node-ip: "{{ ansible_host }}"
   kubelet-arg:
-    # https://github.com/k3s-io/k3s/issues/1264
-    - "node-status-update-frequency=4s"
+    # Don't pull /etc/resolv.conf from host
+    - "resolv-conf="
+  # kubelet-arg:
+  #   # https://github.com/k3s-io/k3s/issues/1264
+  #   - "node-status-update-frequency=4s"
