--- a/kubernetes/apps/kube-system/reloader/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/reloader/app/helmrelease.yaml
@@ -9,26 +9,26 @@ spec:
   chart:
     spec:
       chart: reloader
-      version: v0.0.126
+      version: v1.0.5
       sourceRef:
         kind: HelmRepository
         name: stakater
         namespace: flux-system
+  maxHistory: 3
   install:
     createNamespace: true
     remediation:
       retries: 3
   upgrade:
+    cleanupOnFail: true
     remediation:
       retries: 3
+  uninstall:
+    keepHistory: false
   values:
     fullnameOverride: reloader
     reloader:
-      enableHA: true
-      deployment:
-        replicas: 3
       reloadStrategy: annotations
-      reloadOnCreate: false
       podMonitor:
         enabled: true
         namespace: *namespace
